amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-union.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-union.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Union'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-union.graphql#/declares/union/Union
  Property: 
  Range: [(17,0)-(17,25)]
  Location: 
